예제 HRAPP 완성 (20장 끝)

--- a/hrapp/public/home.html
+++ b/hrapp/public/home.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <meta charset="UTF-8">
- <link rel="stylesheet" href="style.css">
- <title>Static File</title>
-</head>
-<body>
-<h1>Static File</h1>
-</body>
-</html>
+<div class="jumbotron hero-spacer">
+ <h1>Human Resources</h1>
+ <p>This page is example HR application of learn-about-meanstack.</p>
+</div>
